welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:7: error: not found: value ecritMesssage
			ecritMesssage(x);
                        ^